# myFirstCPPgame

./: CMakeLists.txt  README.md
src/: main.cpp
src/gameLayer/: assetManager.cpp  assetManager.h  blocks.h  gameMain.cpp  gameMap.cpp  gameMap.h  helpers.cpp  helpers.h  randomStuff.cpp  randomStuff.h
src/platform/: main.cpp
